# dug

./: CMakeLists.txt  Makefile  README.txt
headers/: constants.h  functions.h  includes.h  structures.h
src/: functions.cpp  main.cpp
